<resources>
    <string name="app_name">GIFT</string>
    <string name="title_activity_login">Sign in</string>

    <string name="setting_title_my_infor">My Info</string>
    <string name="setting_menu_my_profile">My Profile</string>
    <string name="setting_menu_account">Account</string>
    <string name="setting_title_notifications">Notifications</string>
    <string name="setting_title_faq">FAQ</string>
    <string name="setting_title_program">Program Info</string>
    <string name="setting_service_policy">Privacy Policy</string>
    <string name="setting_open_lib">OpenSource License</string>
    <string name="setting_title_service_infor">Service Info</string>
    <string name="setting_service_terms">Terms of Service</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="e_mail">  E-mail</string>
    <string name="password">  Password</string>
    <string name="todo">TODO</string>
    <string name="Group_Data_Empty">Group can not be found.\nPlease create a group or join a group.</string>
    <string name="Thread_Data_Empty">Thread can not be found.</string>
    <string name="Member_Data_Empty">Member can not be found.</string>
    <string name="title_activity_group__main_">Group_Main_Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="thread">Thread</string>
    <string name="member">Member</string>
    <string name="setting">Setting</string>
    <string name="new_group_name">New group name</string>
    <string name="Password_check">Password_check</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_information">User Information</string>
    <string name="register_text">회 원 가 입</string>
    <string name="auto_login">Auto-Login</string>
</resources>
