<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gift_background">
    <!-- image license http://www.iconarchive.com/ -->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="197dp"
        android:layout_marginBottom="20dp"
        app:srcCompat="@drawable/icon_gift"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/login_email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"

        android:background="@null"
        android:drawableStart="@drawable/icon_email"
        android:ems="10"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:textSize="10pt"
        tools:ignore="RtlSymmetry" />

    <LinearLayout
        android:layout_marginBottom="20dp"
        android:layout_width="250dp"
        android:layout_height="5dp"
        android:background="#0066ff"
        android:layout_gravity="center_horizontal">

    </LinearLayout>
    <EditText
        android:id="@+id/login_password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@null"
        android:drawableStart="@drawable/icon_password"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:textSize="10pt"
        tools:ignore="RtlSymmetry" />

    <LinearLayout
        android:layout_marginBottom="100dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">
        <LinearLayout
            android:layout_marginBottom="20dp"
            android:layout_width="250dp"
            android:layout_height="5dp"
            android:background="#0066ff"
            android:layout_gravity="center_horizontal">

        </LinearLayout>

        <CheckBox
            android:id="@+id/auto_checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/auto_login" />
    </LinearLayout>


    <Button
        android:id="@+id/login_btn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:background="@drawable/icon_square"
        android:text="LOG IN\"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/sign_btn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/icon_square"
        android:text="SIGN UP"
        tools:ignore="HardcodedText" />

</LinearLayout>
